bug squashing & some quality of life features

--- a/src/app.css
+++ b/src/app.css
@@ -8,19 +8,36 @@
 		U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
 		U+FFFD;
 }
+@font-face {
+	font-family: 'Tiny5';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(/fonts/tiny5.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+		U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+		U+FFFD;
+}
+
 .horizontalButtonGroup {
 	display: flex;
 }
 .horizontalButtonGroup * {
 	flex: auto;
 }
-.bigButton {
-	font-size: 1.75rem;
+.bigButton,
+.smallButton {
 	border: none;
 	color: hsl(0, 0%, 5%);
 	padding: 0.2rem 0.4rem;
 	font-family: silkscreen, 'Courier New', Courier, monospace;
 	text-align: center;
+}
+.bigButton {
+	font-size: 1.75rem;
+}
+.smallButton {
+	font-size: 1.25rem;
 }
 .sMargin {
 	margin: 0.2rem 0.4rem;
@@ -39,7 +56,7 @@ form input {
 	width: 100%;
 }
 textarea {
-	font-family: monospace;
+	font-family: tiny5, monospace;
 	font-size: 1.25rem;
 }
 h1,
